Adding OpenAI DeepSeek sample
Signed-off-by: Harry Kimpel <harrykimpel@hotmail.com>

--- a/2-python-openai-deepseek-newrelic/index.html
+++ b/2-python-openai-deepseek-newrelic/index.html
@@ -46,7 +46,8 @@
 
             $("#send").click(function () {
                 console.log($("#message").val());
-                ws.send("%(username)s: " + $("#message").val());
+                //ws.send("%(username)s: " + $("#message").val());
+                ws.send($("#message").val());
                 $("#message").val("");
                 return false;
             });
@@ -57,7 +58,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <textarea id="chat" readonly="readonly"></textarea>
+            <textarea id="chat" readonly="readonly" wrap></textarea>
         </div>
 
         <div class="row">
