--- a/2-python-openai-deepseek-newrelic/index.html
+++ b/2-python-openai-deepseek-newrelic/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             padding-top: 20px;
-            background-color: #333;
+            background-color: #00AC69;
             color: #fff;
         }
 
@@ -62,7 +62,7 @@
             };
 
             $("#send").click(function () {
-                console.log($("#message").val());
+                //console.log($("#message").val());
                 //ws.send("%(username)s: " + $("#message").val());
                 ws.send($("#message").val());
                 $("#message").val("");
@@ -80,7 +80,7 @@
                     <div>is thinking?</div>
                 </div>
                 <div class="col-sm-1">
-                    <input type="checkbox" id="thinkMode" name="thinkMode" readonly="readonly" />
+                    <input type="checkbox" id="thinkMode" name="thinkMode" readonly="readonly" disabled />
                 </div>
             </div>
         </div>
@@ -99,6 +99,9 @@
                     </div>
                     <div class="col-sm-1">
                         <button id="send" type="submit" class="btn btn-default btn-sm">Send</button>
+                    </div>
+                    <div class="col-sm-1">
+                        <button id="reconnect" type="javascript:ws.open();" class="btn btn-default btn-sm">Reconnect</button>
                     </div>
                 </div>
             </form>
