--- a/2-python-openai-deepseek-newrelic/index.html
+++ b/2-python-openai-deepseek-newrelic/index.html
@@ -101,7 +101,8 @@
                         <button id="send" type="submit" class="btn btn-default btn-sm">Send</button>
                     </div>
                     <div class="col-sm-1">
-                        <button id="reconnect" type="javascript:ws.open();" class="btn btn-default btn-sm">Reconnect</button>
+                        <button id="reconnect" type="javascript:ws.open();"
+                            class="btn btn-default btn-sm">Reconnect</button>
                     </div>
                 </div>
             </form>
